tests/ui/parser/method-call-on-struct-literal-in-if-condition.stderr
error: path separator must be a double colon
  --> $DIR/method-call-on-struct-literal-in-if-condition.rs:10:19
   |
LL |     if Example { a: one(), }.is_pos() {
   |                   ^ help: use a double colon instead: `::`
   |
   = note: type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>

error: invalid struct literal
  --> $DIR/method-call-on-struct-literal-in-if-condition.rs:10:8
   |
LL |     if Example { a: one(), }.is_pos() {
   |        ^^^^^^^^^^^^^^^^^^^^^
   |
help: you might need to surround the struct literal in parentheses
   |
LL |     if (Example { a: one(), }).is_pos() {
   |        +                     +

error: aborting due to 2 previous errors

